# stellar-dao

./: .env.local.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
contracts/gov_token/: Cargo.toml
contracts/gov_token/src/: lib.rs  test.rs
contracts/gov_token/test_snapshots/test/: admin_mint_and_balance.1.json  double_init_rejected.1.json  faucet_double_claim_rejected.1.json  faucet_grants_amount_once.1.json  init_metadata.1.json  transfer_insufficient_rejected.1.json  transfer_moves_balance.1.json
contracts/proposal_registry/: Cargo.toml
contracts/proposal_registry/src/: lib.rs  test.rs
contracts/proposal_registry/test_snapshots/test/: cannot_execute_twice.1.json  double_init_rejected.1.json  double_vote_rejected.1.json  execute_before_deadline_rejected.1.json  execute_below_quorum_rejected.1.json  execute_losing_proposal_rejected.1.json  finalize_passed_proposal_rejected.1.json  (+9 more)
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
contracts/treasury/test_snapshots/test/: deposit_increases_balance.1.json  deposit_invalid_amount_rejected.1.json  init_stores_addresses.1.json  release_accumulates_total.1.json  release_pays_target_and_tracks_total.1.json
scripts/: deploy.ps1
src/: App.tsx  index.css  vite-env.d.ts
src/components/: CreateProposalForm.tsx  FaucetCard.tsx  GovStats.tsx  ProposalCard.tsx  ProposalList.tsx  WalletBar.tsx
src/lib/: config.ts  errors.ts  format.ts  stellar.ts  toast.tsx  wallet.ts
