[workspace]
resolver = "2"
members = [
    "contracts/gov_token",
    "contracts/proposal_registry",
    "contracts/treasury",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
